[tool.poetry]
name = "vulprio"
version = "0.1.0"
description = ""
authors = ["Adit RP <aditya.putra@pitik.id>"]
readme = "README.md"

packages = [{ include = "chickatrice", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
censys = "^2.2.9"
pandas = "^2.1.3"
polars = "^0.19.13"
altair = "^5.1.2"
pyarrow = "^14.0.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
ipykernel = "^6.26.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
